[package]
name = "braintree"
version = "0.0.6"
authors = ["Damien Radtke <damienradtke@gmail.com>"]
description = "An unofficial Braintree client for Rust."
repository = "https://github.com/dradtke/braintree-rs"
keywords = ["braintree", "payments"]
license = "MIT"

[dependencies]
url = { version = "2.2.2", features = ["serde"] }
RustyXML = "0.1.1"
hyper = "0.10.13"
hyper-native-tls = "0.3.0"
libflate = "1.1.1"
elementtree = "0.5"
