[package]
name = "braintree"
version = "0.0.7"
authors = ["Damien Radtke <damienradtke@gmail.com>"]
description = "An unofficial Braintree client for Rust."
edition = '2021'
repository = "https://github.com/dradtke/braintree-rs"
keywords = ["braintree", "payments"]
license = "MIT"

[dependencies]
url = { version = "2.2.2", features = ["serde"] }
RustyXML = "0.3.0"
hyper = "0.10.16"
hyper-native-tls = "0.3.0"
libflate = "1.2.0"
elementtree = "0.7.0"
